--- a/index.html
+++ b/index.html
@@ -25,8 +25,49 @@
                     Bookmark your favorite sites
                 <i class="fa-solid fa-bookmark"></i></h2>
 
-                
+                <div class="mt-3 px-2 me-auto w-100">
+                    <label for="siteName" class="form-label"><i class="fa-solid fa-book-bookmark me-2"></i>Site Name</label>
+                    <input type="email" name="email" id="siteName" class="form-control" placeholder="Bookmark Name">
+                </div>
+                <div class="mt-3 px-2 me-auto w-100">
+                    <label for="siteName" class="form-label"><i class="fa-solid fa-link me-2"></i>Site URL</label>
+                    <input type="url" name="email" id="siteName" class="form-control" placeholder="Website URL">
+                </div>
+
+                <button type="submit" class="btn btn-page px-5 my-3">Submit</button>
             </section>
+
+            <table class="table text-center">
+                <thead>
+                    <tr>
+                    <th scope="col">Index</th>
+                    <th scope="col">Website Name</th>
+                    <th scope="col">Visit</th>
+                    <th scope="col">Delete</th>
+                    </tr>
+                </thead>
+                <tbody>
+                    <tr>
+                    <th scope="row">1</th>
+                    <td>Mark</td>
+                    <td><button type="submit" class="btn btn-oily"><i class="fa-solid fa-eye pe-2"></i>Visit</button></td>
+                    <td><button type="submit" class="btn btn-danger"><i class="fa-solid fa-trash-can pe-2"></i>Delete</button></td>
+                    </tr>
+                    <tr>
+                    <th scope="row">2</th>
+                    <td>Jacob</td>
+                    <td><button type="submit" class="btn btn-oily"><i class="fa-solid fa-eye pe-2"></i>Visit</button></td>
+                    <td><button type="submit" class="btn btn-danger"><i class="fa-solid fa-trash-can pe-2"></i>Delete</button></td>
+                    </tr>
+                    <tr>
+                    <th scope="row">3</th>
+                    <td>John</td>
+                    <td><button type="submit" class="btn btn-oily"><i class="fa-solid fa-eye pe-2"></i>Visit</button></td>
+                    <td><button type="submit" class="btn btn-danger"><i class="fa-solid fa-trash-can pe-2"></i>Delete</button></td>
+                    </tr>
+                </tbody>
+            </table>
+
         </section>
     </main>
 
