--- a/index.html
+++ b/index.html
@@ -30,11 +30,11 @@
                     <input type="email" name="email" id="siteName" class="form-control" placeholder="Bookmark Name">
                 </div>
                 <div class="mt-3 px-2 me-auto w-100">
-                    <label for="siteName" class="form-label"><i class="fa-solid fa-link me-2"></i>Site URL</label>
-                    <input type="url" name="email" id="siteName" class="form-control" placeholder="Website URL">
+                    <label for="siteURL" class="form-label"><i class="fa-solid fa-link me-2"></i>Site URL</label>
+                    <input type="url" name="email" id="siteURL" class="form-control" placeholder="Website URL">
                 </div>
 
-                <button type="submit" class="btn btn-page px-5 my-3">Submit</button>
+                <button type="submit" onclick="addBookmark()" class="btn btn-page px-5 my-3">Submit</button>
             </section>
 
             <table class="table text-center">
