--- a/index.html
+++ b/index.html
@@ -28,12 +28,12 @@
                 <div class="mt-3 px-2 me-auto w-100">
                     <label for="siteName" class="form-label"><i class="fa-solid fa-book-bookmark me-2"></i>Site Name</label>
                     <input oninput="regularEx(this)" type="text" name="text" id="siteName" class="form-control mb-4" placeholder="Bookmark Name">
-                    <div class="invalid-feedback">Site name must contain at least 3 characters (letters and numbers only).</div>
+                    <div class="invalid-feedback">Site name must be <span class="fw-bold">unique</span> and contain <span class="fw-bold">at least 3 characters (letters and numbers only)</span>.</div>
                 </div>
                 <div class="mt-3 px-2 me-auto w-100">
                     <label for="siteURL" class="form-label"><i class="fa-solid fa-link me-2"></i>Site URL</label>
                     <input oninput="regularEx(this)" type="url" name="url" id="siteURL" class="form-control mb-4" placeholder="Website URL">
-                    <div class="invalid-feedback">Please Enter a valid URL.</div>
+                    <div class="invalid-feedback">Please Enter a <span class="fw-bold">valid</span> URL.</div>
                 </div>
 
                 <button id="submitbtn" type="submit" onclick="addBookmark()" class="btn btn-page px-5 my-3 ">Submit</button>
