--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         <section class="container d-flex justify-content-center align-items-center flex-column">
             <h1>Bookmarker</h1>
             <section class="border-dot w-100 my-5 d-flex justify-content-center align-items-center flex-column py-3">
-                <h2><i class="fa-solid fa-bookmark"></i>
+                <h2 class="text-center"><i class="fa-solid fa-bookmark"></i>
                     Bookmark your favorite sites
                 <i class="fa-solid fa-bookmark"></i></h2>
 
